<resources>
    <string name="app_name">AgmoOKU</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo_login">logoLogin</string>
    <string name="login_text_label">Username</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="register_text">Register</string>
    <string name="label_create_account">Create An Account</string>
    <string name="don_hav_account">Don\'t have an account?</string>
    <string name="already_hav_account">Already Registered?</string>
    <string name="reg_hyperlink">Register here</string>
    <string name="login_hyperlink">Login here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg_name_hint">Full Name</string>
    <string name="reg_email_hint">E-mail</string>
    <string name="reg_password_hint">Password</string>
    <string name="reg_confirmpassword_hint">Confirm Password</string>
    <string name="regAsLabel">Register As : </string>
    <string name="home_nav">Home</string>
    <string name="search_nav">Search</string>
    <string name="events_nav">Events</string>
    <string name="user_nav">User</string>
    <string name="create_acc">Creating Account...</string>
    <string name="press_outside_to_dismiss">Press outside to dismiss</string>
    <string name="please_verify_email_before_login">Please verify email before login</string>
    <string name="account_created">Account Created</string>
    <string name="update_text">Update</string>
    <string name="add_event">Add Event</string>
    <string name="add_story">Add Story</string>
    <string name="event_name_text">Event Name</string>
    <string name="event_description_text">Event Description</string>
    <string name="event_thumbnail_text">Event Thumbnail</string>
    <string name="event_organizer_name_text">Event Organizer Name</string>
    <string name="event_information_text">Event Information</string>
    <string name="event_setting_text">Event Setting</string>
    <string name="singleday_event_text">Single day event</string>
    <string name="multiday_event_text">Multi-day event</string>
    <string name="allow_volunteer_text">Allow Volunteer</string>
    <string name="free_event_text">Free Event</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="start_date">Start Date</string>
    <string name="time_text">Time</string>
    <string name="location_text">Location</string>
    <string name="delete_event">Delete</string>
    <string name="dialog_add_title">Add event</string>
    <string name="dialog_add_description">Are u sure to add this event?</string>
    <string name="dialog_add_positive">Add</string>
    <string name="add_success">Event added successfully</string>
    <string name="add_cancel">Add event cancelled</string>
    <string name="dialog_add_story_title">Add story</string>
    <string name="dialog_add_story_description">Are u sure to add this story?</string>
    <string name="dialog_add_story_positive">Add</string>
    <string name="add_story_success">Story added successfully</string>
    <string name="add_story_cancel">Story event cancelled</string>
    <string name="dialog_add_negative">Cancel</string>
    <string name="dialog_delete_title">Delete event</string>
    <string name="dialog_delete_description">Are u sure to delete this event?</string>
    <string name="dialog_delete_positive">Delete</string>
    <string name="dialog_delete_negative">Cancel</string>
    <string name="dialog_delete_story_title">Delete story</string>
    <string name="dialog_delete_story_description">Are you sure to delete this event?</string>
    <string name="dialog_delete_story_positive">Delete</string>
    <string name="dialog_delete_story_negative">Cancel</string>
    <string name="delete_success">Delete successfully</string>
    <string name="delete_cancel">Delete cancelled</string>
    <string name="dialog_update_title">Update event</string>
    <string name="dialog_update_description">This update will apply to everyone including the participants.</string>
    <string name="dialog_update_positive">Update Anyway</string>
    <string name="dialog_update_negative">Cancel</string>
    <string name="dialog_update_story_title">Update story</string>
    <string name="dialog_update_story_description">This update will apply to everyone.</string>
    <string name="dialog_update_story_positive">Update Anyway</string>
    <string name="dialog_update_story_negative">Cancel</string>
    <string name="update_success">Update successfully</string>
    <string name="update_cancel">Update cancelled</string>
    <string name="update_event">Update</string>
    <string name="event_validation_error">Please fill in all field.</string>
    <string name="select_duration_event">Please select duration of event.</string>
    <string name="storage_permission_denied">Storage permission denied. You can also allow it at settings.</string>
    <string name="image_selection_fail">Failed to select image</string>
    <string name="pending_events">Pending event</string>
    <string name="pending_reject">Reject</string>
    <string name="pending_reject_message">Event has been rejected</string>
    <string name="dialog_reject_title">Reject event</string>
    <string name="dialog_reject_description">Are u sure to reject this event?</string>
    <string name="dialog_reject_positive">Reject</string>
    <string name="dialog_reject_negative">Cancel</string>
    <string name="pending_accept">Approve</string>
    <string name="dialog_accept_title">Approve event</string>
    <string name="dialog_accept_description">Are u sure to approve this event?</string>
    <string name="dialog_accept_positive">Approve</string>
    <string name="dialog_accept_negative">Cancel</string>
    <string name="pending_accept_message">Event has been approved</string>
    <string-array name="displayList">
        <item>All Events</item>
        <item>Pending Events</item>
        <item>Approved Events</item>
        <item>Rejected Events</item>
        <item>Stories</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="story_thumbnail">Story Thumbnail</string>
    <string name="story_title">Story Title</string>
    <string name="story_information">Story information</string>
    <string name="topic_thumbnail_description">Topic Thumnbnail Description</string>
    <string name="topic_description">Topic description</string>
    <string name="topic_post">Post</string>
    <string name="topic_post_cancel">Cancel</string>
    <string-array name="userList">
        <item>OKU</item>
        <item>Normal User</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="something_went_wrong">Oops! Something Went Wrong</string>
    <string name="logging_in">Verifying...</string>
    <string name="btnBookmark">BOOKMARK</string>
    <string name="btnJoinEvent">JOIN EVENT</string>
    <string name="btnVolunteer">VOLUNTEER</string>
    <string name="btnLikes">LIKES</string>
    <string name="locationSearch">Fetching current location...</string>
    <string name="forgot_pass_msg1">Did someone forget their password?</string>
    <string name="thatOk">That\'s ok... Just enter the email address</string>
    <string name="enter_email2">you\'ve used to register with us</string>
    <string name="enter_email3">We\'ll send you a reset link!</string>
    <string name="submit_text">Submit</string>
    <string name="search_hint">Event name, City... </string>
    <string name="search_label">Search</string>
    <string name="admin_home">Events</string>
    <string name="admin_profile">Profile</string>
    <string name="btnAllUpcomingEvent">All Upcoming Events</string>
    <string name="btnUpcomingEvent">Your Upcoming Events</string>
    <string name="btnMyVolunteers">My Volunteers</string>
    <string name="btnMyPostedEvents">My Posted Events</string>
    <string name="btnMyEventHistory">My Event History</string>
    <string name="btnApplyAsVolunteer">Apply As Volunteer</string>
    <string name="topics">Story &amp; Article</string>
    <string name="seeAll">See All</string>
    <string name="tvVR1">Contact Information</string>
    <string name="etVNameHint">Full Name</string>
    <string name="etVEmailHint">Email Address</string>
    <string name="etVPhoneHint">Phone Number</string>
    <string name="checkBoxV">I agree to share my contact infomation to event organizer and I am being serious on volunteering to the event.</string>
    <string name="btnVSubmit">Submit</string>
    <string name="btnVReset">Reset</string>
    <string name="vNameTitle">VOLUNTEER NAME</string>
    <string name="vEmailTitle">VOLUNTEER EMAIL</string>
    <string name="vPhoneTitle">VOLUNTEER PHONE NO.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="contact">Contact</string>
    <string name="vcancel">Cancel</string>
    <string name="btnViewEditEventDetails">View and Edit Event Details</string>
    <string name="btnViewVolunteerDetails">View Volunteer Details</string>
    <string name="btnPendingVolunteerRequest">Pending Volunteer Request</string>
    <string name="tvStatus">Status</string>
    <string name="settings">Settings</string>
    <string name="about_us">About the app</string>
    <string name="logout">Logout</string>
    <string name="aboutUslbl">About the app</string>
    <string name="story">Our app gather all the events, activities and stories around the globe and allow OKU community to join.</string>
    <string name="end_story">OKU needs more care and help in Malaysia. We are here to help. OKU LIVES MATTER</string>
    <string name="devs">The Developers</string>
    <string name="url_ig_marcus">https://www.instagram.com/cheeseburger.extrapickle/</string>
    <string name="url_ig_kj">https://www.instagram.com/teohkjet/</string>
    <string name="url_ig_van">https://www.instagram.com/vanessakoay/</string>
    <string name="url_ig_ly">https://www.instagram.com/liyinggg7/</string>
    <string name="dialogNo">NO</string>
    <string name="dialogYes">YES</string>
    <string name="btnSubmitReason">SUBMIT</string>
    <string name="btnCancelReason">CANCEL</string>
    <string name="btnQuitEvent">QUIT EVENT</string>
    <string name="btnParticipants">View All Participants</string>
    <string name="update_event_button">Update Event</string>
    <string name="tankerartgallery_gmail_com">tankerartgallery@gmail.com</string>
    <string name="contact_us_at">Contact Us at :</string>
    <string name="contact_us">Contact Us</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Here</string>
    <string name="forgot_password">Reset Password?</string>
    <string name="btnDltVol">Delete</string>
    <string name="tvPersonalDetails">Personal Details</string>
    <string name="checkBoxJoinEvent">I agree that all my personal details submitted are valid and the event organizer is able to obtain this information</string>
    <string name="joinCheck2">I agree to the terms and conditions of this event</string>
    <string name="profile_success">Profile Saved</string>
</resources>